Enhance homepage layout and content; update configuration for self-hosted assets. Add personal blog details and improve about section with professional background and recent projects.

--- a/index.html
+++ b/index.html
@@ -2,3 +2,108 @@
 layout: home
 # Index page
 ---
+
+<div class="hero-section" style="text-align: center; padding: 4rem 0; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; margin: -2rem -2rem 3rem -2rem; border-radius: 0 0 2rem 2rem;">
+  <div class="container">
+    <h1 style="font-size: 3rem; margin-bottom: 1rem; font-weight: 800;">Welcome to My Digital Space</h1>
+    <p style="font-size: 1.3rem; margin-bottom: 2rem; opacity: 0.9;">Exploring the intersection of technology, data science, and innovation</p>
+    <div class="hero-buttons" style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+      <a href="/about" class="btn btn-primary" style="background: white; color: #667eea; text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 8px; font-weight: 600;">
+        <i class="fas fa-user"></i> About Me
+      </a>
+      <a href="/posts" class="btn btn-primary" style="background: rgba(255,255,255,0.2); color: white; text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 8px; font-weight: 600; border: 2px solid white;">
+        <i class="fas fa-blog"></i> Read Blog
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="featured-content" style="margin-bottom: 3rem;">
+  <h2 style="text-align: center; margin-bottom: 2rem; color: #2563eb;">Latest Insights</h2>
+  <div class="featured-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+    
+    <div class="featured-card" style="background: white; border-radius: 12px; padding: 1.5rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); border: 1px solid #e5e7eb; transition: transform 0.3s ease;">
+      <div style="background: linear-gradient(135deg, #2563eb, #7c3aed); color: white; padding: 1rem; border-radius: 8px; margin-bottom: 1rem;">
+        <i class="fas fa-industry" style="font-size: 2rem;"></i>
+      </div>
+      <h3 style="margin-bottom: 0.5rem; color: #1f2937;">Industrial AI at Bosch Rexroth</h3>
+      <p style="color: #6b7280; margin-bottom: 1rem;">Discover what it's like to be a data scientist in the industrial sector, building AI solutions for real-world manufacturing challenges.</p>
+      <a href="/posts/what-i-do-at-boschrexroth" class="btn btn-primary" style="text-decoration: none; font-size: 0.9rem;">Read More →</a>
+    </div>
+
+    <div class="featured-card" style="background: white; border-radius: 12px; padding: 1.5rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); border: 1px solid #e5e7eb; transition: transform 0.3s ease;">
+      <div style="background: linear-gradient(135deg, #06b6d4, #0891b2); color: white; padding: 1rem; border-radius: 8px; margin-bottom: 1rem;">
+        <i class="fas fa-rocket" style="font-size: 2rem;"></i>
+      </div>
+      <h3 style="margin-bottom: 0.5rem; color: #1f2937;">My Tech Journey</h3>
+      <p style="color: #6b7280; margin-bottom: 1rem;">From automation engineering to data science - explore my path through technology and the lessons learned along the way.</p>
+      <a href="/posts/yes-i-created-a-blog" class="btn btn-primary" style="text-decoration: none; font-size: 0.9rem;">Read More →</a>
+    </div>
+
+    <div class="featured-card" style="background: white; border-radius: 12px; padding: 1.5rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); border: 1px solid #e5e7eb; transition: transform 0.3s ease;">
+      <div style="background: linear-gradient(135deg, #10b981, #059669); color: white; padding: 1rem; border-radius: 8px; margin-bottom: 1rem;">
+        <i class="fas fa-brain" style="font-size: 2rem;"></i>
+      </div>
+      <h3 style="margin-bottom: 0.5rem; color: #1f2937;">AI & Innovation</h3>
+      <p style="color: #6b7280; margin-bottom: 1rem;">Stay updated with the latest trends in AI, machine learning, and how they're transforming industries worldwide.</p>
+      <a href="/categories/#tech" class="btn btn-primary" style="text-decoration: none; font-size: 0.9rem;">Explore →</a>
+    </div>
+
+  </div>
+</div>
+
+<div class="stats-section" style="background: #f8fafc; padding: 2rem; border-radius: 12px; margin-bottom: 3rem;">
+  <h2 style="text-align: center; margin-bottom: 2rem; color: #2563eb;">Quick Stats</h2>
+  <div class="stats-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 1.5rem; text-align: center;">
+    
+    <div class="stat-item">
+      <div style="font-size: 2.5rem; font-weight: 800; color: #2563eb; margin-bottom: 0.5rem;">4+</div>
+      <div style="color: #6b7280; font-weight: 600;">Years Experience</div>
+    </div>
+
+    <div class="stat-item">
+      <div style="font-size: 2.5rem; font-weight: 800; color: #7c3aed; margin-bottom: 0.5rem;">50+</div>
+      <div style="color: #6b7280; font-weight: 600;">AI Models Built</div>
+    </div>
+
+    <div class="stat-item">
+      <div style="font-size: 2.5rem; font-weight: 800; color: #06b6d4; margin-bottom: 0.5rem;">10+</div>
+      <div style="color: #6b7280; font-weight: 600;">Research Projects</div>
+    </div>
+
+    <div class="stat-item">
+      <div style="font-size: 2.5rem; font-weight: 800; color: #10b981; margin-bottom: 0.5rem;">∞</div>
+      <div style="color: #6b7280; font-weight: 600;">Learning Mindset</div>
+    </div>
+
+  </div>
+</div>
+
+<style>
+.featured-card:hover {
+  transform: translateY(-4px);
+}
+
+.hero-section {
+  background-attachment: fixed;
+}
+
+@media (max-width: 768px) {
+  .hero-section h1 {
+    font-size: 2rem !important;
+  }
+  
+  .hero-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .featured-grid {
+    grid-template-columns: 1fr;
+  }
+  
+  .stats-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+</style>
